保存tradingHours
保存tradingHours
